--- a/website/app/application/core/projects/project/processes/sidebar/sidebar-samples.html
+++ b/website/app/application/core/projects/project/processes/sidebar/sidebar-samples.html
@@ -42,16 +42,20 @@
                                     <span style="padding-left: 30px;"> {{measure.value}}</span>
                                 </div>
                                 <div ng-switch-when="pair">
-                                                        <span style="padding-left: 30px;">
-                                                            {{measure.attribute1.value}} {{measure.attribute1.unit}} ::
-                                                            {{measure.attribute2.value}} {{measure.attribute2.unit}}
-                                                        </span>
+                                    <span style="padding-left: 30px;">
+                                        {{measure.attribute1.value}} {{measure.attribute1.unit}} ::
+                                        {{measure.attribute2.value}} {{measure.attribute2.unit}}
+                                    </span>
+                                </div>
+                                <div ng-switch-when="line">
+                                    <span style="padding-left: 30px;">
+                                          <a ng-click="showLineChart(property)" ><i class="fa fa-fw fa-line-chart"></i></a>
+                                    </span>
                                 </div>
                                 <div ng-switch-when="histogram">
                                     <a href="" popover="Graph displayed here...."
                                        popover-title="Particle size distribution">{{measure.name}}
-                                        <i
-                                                class="fa fa-bar-chart"></i>
+                                        <i class="fa fa-bar-chart"></i>
                                     </a>
                                 </div>
                             </div>
