--- a/website/app/application/core/projects/project/processes/line.html
+++ b/website/app/application/core/projects/project/processes/line.html
@@ -4,13 +4,13 @@
 <div class="modal-body">
     <div class="row">
         <div class="col-xs-4">
-            <strong>Categories</strong>
+            <strong>X</strong>
             <div class="row" ng-repeat="c in categories">
                 {{c}}
             </div>
         </div>
         <div class="col-xs-4">
-            <strong>Values</strong>
+            <strong>Y</strong>
             <div class="row" ng-repeat="v in values">
                 {{v}}
             </div>
