--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -56,7 +56,7 @@
                     </div>
                     <br>
 
-                    <div ng-if="template._type !== 'as_received'" class="row">
+                    <div  class="row">
                         <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a
                             ng-click="setUp()">Setup</a></span>
                     </div>
