--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -1,5 +1,6 @@
 <div>
     <div class="modal-header">
+        <button type="button" class="close pull-right" ng-click="cancel()" aria-hidden="true">&times;</button>
         <h3 class="modal-title">Choose Measurement</h3>
     </div>
     <br>
@@ -36,7 +37,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-3">
+                        <div ng-if="chosenProperty" class="col-xs-3">
                             <button class="btn btn-primary" ng-click="save()">Save</button>
                         </div>
                     </div>
