Show details on files. Allow user to click on file to see the details.

--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -7,7 +7,7 @@
                     <li ui-sref-active="active"><a ui-sref="projects.project.files.images">images</a></li>
                     <li ui-sref-active="active"><a ui-sref="projects.project.files.types">by type</a></li>
                 </ul>
-                <input class="pull-right col-xs-6" style="margin-top: 15px; background-color: #D2C4D5"
+                <input ng-if="false" class="pull-right col-xs-6" style="margin-top: 15px; background-color: #D2C4D5"
                        type="text" placeholder="SEARCH..." on-enter="files.showSearchResults()">
             </div>
         </nav>
