--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li role="presentation" ui-sref-active="active">
-                        <a ui-sref="projects.project.files"
+                        <a ui-sref="projects.project.files.all"
                            ui-sref-opts="{reload: true}"
                            class="pointer">
                             <i class="fa fa-fw fa-files-o"></i> Files
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <div class="row" style="margin-top: 15px">
+    <div class="row" style="margin-top: 15px; z-index: 1000">
         <div class="col-xs-offset-1">
             <input class="col-xs-11"
                    type="text"
