Change from SEARCH PROJECT... to SEARCH FILES... since we aren't searching everything in the project.

--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -97,7 +97,7 @@
         <div class="col-xs-offset-1">
             <input class="col-xs-11"
                    type="text"
-                   placeholder="SEARCH PROJECT..."
+                   placeholder="SEARCH FILES..."
                    ng-model="query"
                    on-enter="search()">
         </div>
