--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -24,9 +24,11 @@
                         <b>{{property.name}}</b> :
                         <div class="row">
                             <div class="col-xs-offset-1">
-                                Best Measure: <span ng-if="property.best_measure.length !== 0"
-                                                    style="padding-left: 5px;">
-                                    {{property.best_measure[0].value}}  {{property.best_measure[0].unit}}</span> <br>
+                                Best Measure:
+                                   <span ng-if="property.best_measure.length !== 0">
+                                        <display-measurement project="project" measure="property.best_measure[0]">
+                                        </display-measurement>
+                                    </span><br>
                                 Measurements:
                                 <ul>
                                     <li ng-repeat="measure in property.measurements">
