--- a/website/app/application/core/projects/project/samples/view-measurements.html
+++ b/website/app/application/core/projects/project/samples/view-measurements.html
@@ -13,13 +13,7 @@
                     <div class="col-xs-1">
                         <input type="radio" ng-model="selected.item" ng-value="measure">
                     </div>
-                    <div class="col-xs-6">
-                        {{measure.value}} {{measure.unit}}
-                        <span  style="padding-left: 30px;">
-                            <img src="assets/img/splash/process-icon.png"
-                            style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
-                        </span>
-                    </div>
+                    <display-measurement project="project" measure="measure"></display-measurement>
                 </div>
             </div>
         </div>
