--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -11,8 +11,8 @@
         <div class="row">
             <div class="sample headings">Transformation</div>
             <p>
-                <small class="text-muted">This section will provide <b>{{current.name}}</b> initial measuremenets and
-                    how these measures have been transformed overrtime.
+                <small class="text-muted">This section will provide <b>{{current.name}}</b> initial measurements and
+                    how these measures have been transformed overtime.
                 </small>
             </p>
             <ul style="padding-left: 40px;" class="list-inline">
