--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -2,17 +2,20 @@
     <div class="modal-header">
         <h3 class="modal-title">{{selected.item.name}}</h3>
     </div>
-    <div class="modal-body">
+    <div class="modal-body details-main-content">
         <div class="row">
-            <div class="process headings">Details:</div>
+            <div class="col-xs-8">
+                <div class="process headings">Details:</div>
 
-            <div class="row"><b>Description about process:</b> <br>
-                {{selected.item.what}} <br>
+                <div class="row"><b>Description about process:</b> <br>
+                    {{selected.item.what}}<div ng-if="selected.item.what === ''">--None--</div>
 
-                <div class="row"><b>Reason you performed the process:</b><br>
-                    {{selected.item.why}} <br>
+                    <div class="row"><b>Reason you performed the process:</b><br>
+                        {{selected.item.why}}<div ng-if="selected.item.why === ''">--None--</div>
 
-                    <div class="row"><b>Owner: </b>{{selected.item.owner}}</div>
+                        <div class="row"><b>Owner: </b>{{selected.item.owner}}</div>
+                        <div class="row"><b>Does Transform: </b>{{selected.item.does_transform}}</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -34,7 +37,14 @@
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
                         <a ng-click="openSample(sample)" class="link" style="padding-left: 15px;">{{sample.name}}</a>
-
+                        <span ng-if="selected.item.does_transform">
+                            <span ng-if="sample._type==='in'">
+                                  (Before {{selected.item.name}})
+                            </span>
+                             <span ng-if="sample._type==='out'">
+                                 (After {{selected.item.name}})
+                             </span>
+                        </span>
                         <p style="padding-left: 80px">
                             <small class="text-muted">{{sample.mtime | toDateString}} , {{sample.owner}}</small>
                         </p>
@@ -46,6 +56,9 @@
             <div class="col-xs-12">
                 <div class="process headings">Files:</div>
                 <div>Files Used:</div>
+                <div ng-if="selected.item.files_used.length === 0">
+                     --None--<br>
+                </div>
                 <div ng-repeat="attachment in selected.item.files_used">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
@@ -59,6 +72,9 @@
                 </div>
 
                 <div>Files Produced:</div>
+                <div ng-if="selected.item.files_produced.length === 0">
+                    --None--
+                </div>
                 <div ng-repeat="attachment in selected.item.files_produced">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
