--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -2,7 +2,7 @@
     <div class="modal-header">
         <h3 class="modal-title">{{modal.item.name}} </h3>
     </div>
-    <div class="modal-body">
+    <div class="modal-body details-main-content">
         <div style="padding-left:30px;">
             <div class="row">
                 <div class="sample headings">Details</div>
@@ -49,7 +49,7 @@
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                        <a class="link" style="padding-left: 15px;">{{file.name}}</a>
+                        <a ng-click="openFile(file)" class="link" style="padding-left: 15px;">{{file.name}}</a>
 
                         <p style="padding-left: 80px">
                             <small class="text-muted">{{file.birthtime | toDateString}} , {{file.owner}} , {{file.size}}
