--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -8,12 +8,13 @@
                 <div class="process headings">Details:</div>
 
                 <div class="row"><b>Description about process:</b> <br>
-                    {{current.what}} <br>
+                    {{current.what}} <div ng-if="current.what === ''">--None--</div>
 
                     <div class="row"><b>Reason you performed the process:</b><br>
-                        {{current.why}} <br>
+                        {{current.why}}<div ng-if="current.why === ''">--None--</div>
 
                         <div class="row"><b>Owner: </b>{{current.owner}}</div>
+                        <div class="row"><b>Does Transform: </b>{{current.does_transform}}</div>
                     </div>
                 </div>
             </div>
@@ -57,6 +58,9 @@
             <div class="col-xs-12">
                 <div class="process headings">Files:</div>
                 <div>Files Used:</div>
+                <div ng-if="current.files_used.length === 0">
+                    --None--
+                </div>
                 <div ng-repeat="attachment in current.files_used">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
@@ -73,6 +77,9 @@
                 </div>
 
                 <div>Files Produced:</div>
+                <div ng-if="current.files_produced.length === 0">
+                    --None--<br>
+                </div>
                 <div ng-repeat="attachment in current.files_produced">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
