--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -4,7 +4,7 @@
             <nav class="navbar navbar-default">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a>All</a></li>
+                        <li class="active"><a>All Samples</a></li>
                     </ul>
                 </div>
             </nav>
@@ -13,11 +13,11 @@
             <div class="col-xs-4">
                 <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
                     <div class="row">
-                        <div style="text-align: center;margin-top: 20px;">
-                            <button ui-sref="projects.project.samples.create"
-                                    class="btn-sample  btn-details-container btn btn-default"> create
-                            </button>
-                        </div>
+                        <!--<div style="text-align: center;margin-top: 20px;">-->
+                            <!--<button ui-sref="projects.project.samples.create"-->
+                                    <!--class="btn-sample  btn-details-container btn btn-default"> create-->
+                            <!--</button>-->
+                        <!--</div>-->
                     </div>
                     <ul  class="list-group">
                         <li ui-sref="projects.project.samples.edit({'sample_id': sample.id})"
