--- a/website/app/index.html
+++ b/website/app/index.html
@@ -147,6 +147,7 @@
 <script src="bower_components/angular-validation/dist/angular-validation.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation-rule.js"></script>
 <script src="bower_components/ag-grid/dist/angularGrid.js"></script>
+<script src="bower_components/angular-google-chart/ng-google-chart.js"></script>
 <script src="assets/js/ng-tags-input.js"></script>
 <!-- endbuild -->
 
