--- a/website/app/application/core/projects/project/processes/histogram.html
+++ b/website/app/application/core/projects/project/processes/histogram.html
@@ -16,6 +16,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div google-chart chart="chartObject"/>
+    </div>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
