--- a/website/app/application/core/projects/project/processes/line.html
+++ b/website/app/application/core/projects/project/processes/line.html
@@ -5,16 +5,21 @@
     <div class="row">
         <div class="col-xs-4">
             <strong>X</strong>
+
             <div class="row" ng-repeat="c in categories">
                 {{c}}
             </div>
         </div>
         <div class="col-xs-4">
             <strong>Y</strong>
+
             <div class="row" ng-repeat="v in values">
                 {{v}}
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div google-chart chart="chartObject"/>
     </div>
 </div>
 <div class="modal-footer">
