--- a/website/app/application/core/projects/project/processes/sidebar/sidebar-files.html
+++ b/website/app/application/core/projects/project/processes/sidebar/sidebar-files.html
@@ -8,7 +8,7 @@
                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                 <img src="assets/img/splash/file_icon.png"
                      style="height: 40px;padding-bottom: 10px;">
-                <a ng-click="openDetails(attachment)" class="link pointer"
+                <a ng-click="openFile(attachment)" class="link pointer"
                    style="padding-left: 15px;">{{attachment.name}}</a>
 
             </div>
@@ -21,7 +21,7 @@
                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                 <img src="assets/img/splash/file_icon.png"
                      style="height: 40px;padding-bottom: 10px;">
-                <a ng-click="openDetails(attachment)" class="link pointer"
+                <a ng-click="openFile(attachment)"  class="link pointer"
                    style="padding-left: 15px;">{{attachment.name}}</a>
             </div>
         </div>
