--- a/website/app/application/core/projects/project/processes/sidebar/sidebar-samples.html
+++ b/website/app/application/core/projects/project/processes/sidebar/sidebar-samples.html
@@ -5,7 +5,7 @@
         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
         <img src="assets/img/splash/sample_icon.png"
              style="height: 40px;padding-bottom: 10px;">
-        <a ng-click="openDetails(sample)" class="link pointer"
+        <a ng-click="openSample(sample)" class="link pointer"
            style="padding-left: 15px;">{{sample.name}}</a>
 
         <div class="row">
