--- a/website/app/application/core/projects/project/search.html
+++ b/website/app/application/core/projects/project/search.html
@@ -5,21 +5,32 @@
                 <h4>Showing top {{search.results.hits.length}} matches of {{search.results.total}} found.</h4>
             </div>
             <div ng-repeat="hit in search.results.hits" class="row" style="margin-top: 20px">
-                <span>
-                    <b>{{$index+1}}. </b>
-                    <i class="fa fa-files-o fa-fw" style="color: #9F88C1;"></i>
-                    <a ng-click="search.openFile(hit._source)">{{hit._source.name}}</a>
-                    {{hit._source.mediatype.mime}}
-                </span>
-                <span class="row">Path: {{hit._source.path}}</span>
+                <div ng-switch="hit._source._type">
+                    <div ng-switch-when="datafile">
+                        <span>
+                            <b>{{$index+1}}. </b>
+                            <i class="fa fa-files-o fa-fw" style="color: #9F88C1;"></i>
+                            <a ng-click="search.openFile(hit._source)">{{hit._source.name}}</a>
+                            {{hit._source.mediatype.mime}}
+                        </span>
+                        <span class="row">Path: {{hit._source.path}}</span>
 
-                <div ng-if="search.isImage(hit._source.mediatype.mime)">
-                    <a ng-click="search.openFile(hit._source)">
-                        <img class="img-thumbnail" height="140" width="140" ng-src="{{search.fileSrc(hit._source.id)}}">
-                    </a>
-                </div>
-                <div ng-if="hit._source.contents.length !== 0">
-                    <p>{{hit._source.contents | truncate:75:'...':true}}</p>
+                        <div ng-if="search.isImage(hit._source.mediatype.mime)">
+                            <a ng-click="search.openFile(hit._source)">
+                                <img class="img-thumbnail" height="140" width="140"
+                                     ng-src="{{search.fileSrc(hit._source.id)}}">
+                            </a>
+                        </div>
+                        <div ng-if="hit._source.contents.length !== 0">
+                            <p>{{hit._source.contents | truncate:75:'...':true}}</p>
+                        </div>
+                    </div>
+                    <div ng-switch-when="sample">
+                        Show sample
+                    </div>
+                    <div ng-switch-when="process">
+                        Show process
+                    </div>
                 </div>
             </div>
         </div>
