Remove stylex declaration.

--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -10,7 +10,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-8" stylex="margin-left: 10px;">
+    <div class="col-xs-8">
         <div ui-view></div>
     </div>
 </div>
