--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -4,36 +4,13 @@
             <nav class="navbar navbar-default">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a>All Samples</a></li>
+                        <li ui-sref-active="active"><a ui-sref="projects.project.samples.all">All Samples</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
-        <div class="row" style="margin-top: 20px;">
-            <div class="col-xs-4">
-                <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
-                    <div class="row">
-                        <!--<div style="text-align: center;margin-top: 20px;">-->
-                            <!--<button ui-sref="projects.project.samples.create"-->
-                                    <!--class="btn-sample  btn-details-container btn btn-default"> create-->
-                            <!--</button>-->
-                        <!--</div>-->
-                    </div>
-                    <ul  class="list-group">
-                        <li ui-sref="projects.project.samples.edit({'sample_id': sample.id})"
-                            class="list-group-item pointer"
-                            ng-repeat="sample in project.samples"
-                            ng-class="{'sample': current.id === sample.id}"
-                            ng-click="viewSample(sample)">
-                            <img src="assets/img/splash/sample_icon.png" style="height: 35px;padding-bottom: 10px;">
-                            {{sample.name}}
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-xs-8" stylex="margin-left: 10px;">
-                <div ui-view></div>
-            </div>
+        <div class="col-xs-8">
+            <div ui-view></div>
         </div>
     </div>
 </div>
